--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ img {
     width: 100%;
 }
 
+/* Navbar */
 .navbar {
     background-color: var(--primary-color);
     color: #fff;
@@ -68,6 +69,27 @@ img {
 
 }
 
+/* Showcase */
+.showcase {
+    height: 400px;
+    background-color: var(--primary-color);
+    color: #fff;
+    position: relative;
+}
+
+.showcase h1 {
+    font-size: 40px;
+}
+
+.showcase p {
+    margin: 20px 0;
+}
+
+.showcase .grid {
+    grid-template-columns: 55% 45%;
+}
+
+/* Utilities */
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -77,6 +99,15 @@ img {
 
 .flex {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     justify-content: center;
     align-items: center;
     height: 100%;
