--- a/css/style.css
+++ b/css/style.css
@@ -128,4 +128,12 @@ img {
     right: 0;
     left: 0;
     transform: skewY(-3deg);
+    -webkit-transform: skewY(-3deg);
+    -moz-transform: skewY(-3deg);
+    -ms-transform: skewY(-3deg);
+}
+
+/* Stats */
+.stats {
+    padding-top: 100px;
 }
