--- a/css/utilities.css
+++ b/css/utilities.css
@@ -30,6 +30,11 @@
     height: 100%;
 }
 
+.grid-3 {
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
 .btn {
     display: inline-block;
     padding: 10px 30px;
