--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,23 @@ img {
 .cloud .grid {
     grid-template-columns: 4fr 3fr;
 }
+
+/* Languages */
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: transform 120ms ease-in;
+}
+
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.languages .card:hover {
+    transform: translateY(-15px);
+}
