--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,23 @@ img {
 .footer .social a {
     margin: 0 10px;
 }
+
+/* Tablets and under */
+@media(max-width: 768px) {
+
+}
+
+/* Mobile */
+@media(max-width: 500px) {
+    .navbar {
+        height: 110px;
+    }
+    .navbar .flex {
+        flex-direction: column;
+    }
+    .navbar ul {
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+    }
+}
