--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,31 @@ img {
 
 /* Tablets and under */
 @media(max-width: 768px) {
+    .grid,
+    .showcase .grid,
+    .cli .grid,
+    .cloud .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
 
+    .showcase {
+        height: auto;
+    }
+
+    .showcase-text {
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    .showcase-form {
+        justify-self: center;
+        margin: auto ;
+    }
+    .cli .grid > *:first-child {
+        grid-column: 1;
+        grid-row: 1;
+    }
 }
 
 /* Mobile */
@@ -203,9 +227,11 @@ img {
     .navbar {
         height: 110px;
     }
+
     .navbar .flex {
         flex-direction: column;
     }
+
     .navbar ul {
         padding: 10px;
         background-color: rgba(0, 0, 0, 0.1);
