--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,25 @@ img {
     transform: translateY(-15px);
 }
 
+/* Features */
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+} 
+
+.features-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
 /* Footer */
 .footer .social a {
     margin: 0 10px;
 }
+
+
+
+
 
 /* Tablets and under */
 @media(max-width: 768px) {
