--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,8 @@ code, pre {
     .grid,
     .showcase .grid,
     .cli .grid,
+    .features-main .groid,
+    .docs-main .grid,
     .cloud .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
@@ -274,9 +276,27 @@ code, pre {
         justify-self: center;
         margin: auto ;
     }
+
     .cli .grid > *:first-child {
         grid-column: 1;
         grid-row: 1;
+    }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid >*:first-child,
+    .features-main .grid >*:nth-child(2) {
+        grid-column: 1;
     }
 }
 
